--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@gitee.com:trueBurger/admin-fe.git"
-  },
-  "author": "",
+  "repository": "git@gitee.com:trueBurger/admin-fe.git",
+  "author": "ZhuJianye <borisdunk@sina.com>",
   "license": "ISC"
 }
