--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "ZhuJianye <borisdunk@sina.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-syntax-flow": "^7.12.13",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-env": "^7.13.15",
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.8",
@@ -27,6 +31,7 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "4.2.2"
