--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "rc-pagination": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "4.2.2"
