--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "prop-types": "15.6.0",
     "rc-pagination": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fileupload": "2.4.0",
     "react-router-dom": "4.2.2"
   }
 }
