--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fileupload": "2.4.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "simditor": "^2.3.6"
   }
 }
